k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webflix
  labels:
    app: webflix
    tier: backend
    environment: production
spec:
  type: ClusterIP
  selector:
    app: webflix
  ports:
    - name: http
      protocol: TCP
      port: 7000
      targetPort: 8080
