k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webflix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webflix.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webflix
            port:
              number: 7000
